# Stratetrace

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/: ALGORITHM.md
src/stratatrace/: __init__.py  backend.py  cli.py  controller.py  model.py  packet.py  report.py  stats.py
tests/: test_backend.py  test_cli.py  test_controller.py  test_packet.py  test_stats.py
tests/fixtures/: all_timeout.json  duplicate_visibility.json  ecmp.json  flow_loss.json  mutable.json  opaque.json  realistic_lossy_mutable.json  silent_tail.json  split_visibility.json  transparent.json  unreachable.json  unstable.json
tools/: netns_lab.sh  run_tests.sh
